# rbf_pic

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  bitbucket-pipelines.yml  index.html
assets/: 2dtest.txt  bigDam.txt  cellPressureGradient.txt  config.txt  config3d.txt  damTank.txt  drop3d.txt  dropTank.txt  injector.txt  injector3d.txt  injectortimes.txt  leftDamConfig.txt  nonGraded.txt  phs.txt  pressure.txt  smallDrop3.txt  smallDropRing3.txt  smalltank3.txt  smaltank.txt  solid.txt  solid3d.txt  tank2.txt
assets/siggraph/: .dambreak.txt.swp  bigdrop3.txt  dambreak.128.txt  dambreak.256.txt  dambreak.oldconfig.txt  dambreak.regular.txt  dambreak.txt  dambreakhigh.txt  db4.128.txt  db4.256.oldconfig.txt  db4.256.txt  db4.64.txt  db4.oldconfig.txt  db4.py  db4.txt  db4_128.txt  db4_regular.128.txt  db4_regular.256.txt  drop2.txt  drop2_regular.txt  drop2cell.txt  drop2regular.txt  drop3.128.txt  drop3.256.txt  drop3.txt  drop3_regular.txt  glass.txt  injectors2.txt  maze.txt  newteaser.txt  tank2.txt  teaser.txt
examples/: CMakeLists.txt  regular_poisson.cpp
gltool/: CMakeLists.txt  SearchRenderer.cpp  SearchRenderer.h  boundary_handler2_model.cpp  boundary_handler2_model.h  cell_centered_graph2_model.cpp  cell_centered_graph2_model.h  cell_graph2_model.cpp  cell_graph2_model.h  graphic_element_set.cpp  graphic_element_set.h  localDependencies.txt  mesh_model.h  particle_system2_model.cpp  particle_system2_model.h  particle_system_model.h  particle_system_model.inl  pic2.cpp  pic2qt.cpp  ponos_wrapper.cpp  ponos_wrapper.h  simulation_quad_tree_domain_model.cpp  simulation_quad_tree_domain_model.h  simulation_regular_domain_model.cpp  simulation_regular_domain_model.h  solid_model.h
gltool/debug/: .pic_debugger3.cpp.swp  CMakeLists.txt  custom_simulation_debugger.cpp  flip_debugger.cpp  full_cell_centered_graph2_pic.cpp  main.cpp  nanogui_utils.h  obj_test.cpp  pic_debugger.cpp  pic_debugger3.cpp  stencil_debugger.cpp  test_utils.cpp  test_utils.h  ui.h  ui.inl  utils.h  visualizationFile  visualize_simulation_step.cpp
gltool/tests/: CMakeLists.txt  advection_test.cpp  bilinear_cellgraph.cpp  cell_graph2_test.cpp  cell_graph3_test.cpp  clustersimulation.cpp  custom_fields_cellgraph2.cpp  full_cell_centered_graph2_pic.cpp  full_cell_graph2_pic.cpp  particle_grid_test.cpp  particlegrid_nogl.cpp  pic_adap_test.cpp  pic_qt_test.cpp  ping_pong_test.cpp  renderfile.cpp  simulation2_test.cpp  transfer_face_vertex_test.cpp
python/: bboxToQuadMesh.py  gen_scene.py  lic_from_particles.py  profile.py  visualize_xyz.py
python/analysis/: adaptive_simulation.csv  create_cond_number_histogram.py  export_to_csv.py  matrix_size.adaptive.npy  matrix_size.numpy.npy  regular_simulation.csv  x_values.numpy.npy  y_cond.adaptive.npy  y_cond.numpy.npy  y_iterations.adaptive.npy  y_iterations.numpy.npy
src/: CMakeLists.txt  furoo.h
src/algorithms/: fast_marching_method.cpp  fast_marching_method.h  fast_sweep.cpp  fast_sweep.h
src/animation/: animation.cpp  animation.h  frame.cpp  frame.h  physics_animation.cpp  physics_animation.h
src/apps/: adaptive_centered_pic2.cpp  adaptive_centered_pic2.h  adaptive_pic2.cpp  adaptive_pic2.h  custom_simulation.h  custom_simulation.inl  pic_simulation2.cpp  pic_simulation2.h  poisson.h  simulation_steps.h  simulation_steps.inl  simulation_steps_trask.inl
src/blas/: blas.cpp  blas.h  differential_rbf.inl  interpolant.cpp  interpolant.inl  interpolation.h  linear_matrix.h  linear_solver.cpp  linear_solver.h  linear_vector.cpp  linear_vector.h  matrix_interface.h  rbf.h  rbf.inl  rbf_kernels.h  rbf_kernels.inl  temporal_integrator.h  temporal_integrator.inl
src/common/: args_parser.cpp  args_parser.h  code_profiler.cpp  code_profiler.h  debug.h  definitions.cpp  definitions.h  distribution.h  distribution.inl  functions.h  io.cpp  io.h  io.inl  random.h  search.h  timer.cpp  timer.h
src/geometry/: bbox.cpp  bbox.h  bbox.inl  matrix.h  matrix.inl  mesh.h  mesh.inl  numeric.cpp  numeric.h  numeric.inl  point.h  point.inl  queries.cpp  queries.h  transform.cpp  transform.h  transform.inl  vector.h  vector.inl
src/physics/: domain_boundary_handler.cpp  domain_boundary_handler.h  injector.h  injector.inl  particle_system.h  particle_system.inl  particle_system2.cpp  particle_system2.h  pic_solver2.cpp  pic_solver2.h  simulation.h  simulation.inl  simulation_domain.h  simulation_quad_tree.cpp  simulation_quad_tree.h  simulation_regular_domain.cpp  simulation_regular_domain.h  solid_box.h  solid_box.inl  solid_interface.h  solver.h  solver.inl
src/structures/: bvh.h  bvh.inl  cell_graph.cpp  cell_graph.h  cell_graph3.cpp  cell_graph3_edge.cpp  cell_graph3_node.cpp  cell_graph3_vertex.cpp  cell_graph_edge.cpp  cell_graph_node.cpp  cell_graph_vertex.cpp  octree.cpp  octree.h  point_cell_set.h  point_cell_set.inl  point_set.h  point_z_grid.cpp  point_z_grid.h  point_z_grid.inl  quad_tree.cpp  quad_tree.h  regular_grid.cpp  regular_grid.h  structure_interface.h  structure_interface.inl  structure_interface_field.inl
tests/: CMakeLists.txt  bbox_test.cpp  blas_test.cpp  boundary_handler_test.cpp  cell_graph_test.cpp  distribution_test.cpp  fast_propagation_test.cpp  hybrid_methods_test.cpp  interpolation_test.cpp  kernel_test.cpp  linear_matrix_test.cpp  linear_solvers_test.cpp  linear_vector_test.cpp  main.cpp  matrix_test.cpp  numeric_test.cpp  octree_test.cpp  particle_system_test.cpp  pic_qt_test.cpp  pic_simulation2.cpp  pic_test.cpp  point_cell_set_test.cpp  point_test.cpp  point_z_grid_test.cpp  poisson_test.cpp  quad_tree_test.cpp  queries_test.cpp  random_test.cpp  rbf_test.cpp  regular_grid_test.cpp  sim_cell_graph2_test.cpp  sim_quad_tree_test.cpp  sim_regular_test.cpp  temporal_integrator_tests.cpp  transform_test.cpp  vector_test.cpp
tests/simulations/: CMakeLists.txt  cellGraphToQuadMesh.cpp  classifyParticles.cpp  full_cell_centered_graph2_pic.cpp  lid_drive_cavity.cpp  pic_custom.cpp  poisson.cpp  poissonNeumann.cpp  section.cpp  stats.cpp
